# score-video-scraper

./: .gitignore  CLAUDE.md  CONTEXT.md  frame_editor.py  main.py  package.json  pyproject.toml  scraper.py
electron/: index.html  main.js  preload.js  renderer.js
