[project]
name = "score-video-scraper"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "customtkinter>=5.2.2",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "pillow>=12.0.0",
    "reportlab>=4.4.5",
    "scikit-image>=0.25.2",
    "yt-dlp>=2025.11.12",
]
